package seedu.duke.commands;

public abstract class Commands {
    public void execute() throws KaChinnnngException {
    }
}
