package seedu.stocker.commands;

public class Parser {
}
