package seedu.stocker.commands;

public class Storage {
}
